--- a/class-08/in-class-demo/in-class-example/index.html
+++ b/class-08/in-class-demo/in-class-example/index.html
@@ -18,7 +18,7 @@
       </div>
 
       <div class="header">
-        <h1>STAULK XCHANGE</h1>
+        <h1>STALK XCHANGE</h1>
       </div>
 
       <div class="insetContainer">
