--- a/class-09/inclassexample/index.html
+++ b/class-09/inclassexample/index.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
 
-<head>
-  <link rel="stylesheet" href="style.css">
-  <meta charset="utf-8">
-  <title></title>
-</head>
+    <div class="mainContainer">
 
-<body>
+      <h1>CSS Selector Demos</h1>
 
-  <div class="mainContainer">
-    <h1>Hullo?</h1>
-    <p class="bodyCopy">
-      The carbon in our apple pies bits of moving fluff dispassionate extraterrestrial observer the carbon in our apple pies invent the universe white dwarf and billions upon billions upon billions upon billions upon billions upon billions upon billions.
-    </p>
-    <div class="subContentContainer">
-      <div id="topOne" class="subContent">Hi.</div>
-      <div class="subContent">Hi.</div>
-      <div class="subContent">Hi.</div>
-      <div class="subContent">Hi.</div>
-      <div class="subContent">Hi.</div>
-      <p>Blah <span>blah</span> blah</p>
-      <a href="#">My Link</a>
+      <div class="textFlex">
+        <div class="smallContainer">
+          <h3>Section headline</h3>
+          <p>Here is some paragraph text...</p>
+          <p>Here is some paragraph text...</p>
+          <p>Here is some paragraph text...</p>
+          <p>Here is some paragraph text...</p>
+          <p>Here is some paragraph text...</p>
+        </div>
+        <div class="smallContainer">
+          <h3>Section headline</h3>
+          <p>Here is some paragraph text...</p>
+          <p>Here is some paragraph text...</p>
+          <p>Here is some paragraph text...</p>
+          <p>Here is some paragraph text...</p>
+          <p>Here is some paragraph text...</p>
+        </div>
+      </div>
+
     </div>
 
-    <div class="linkContainer">
-      <p><a href="http://www.google.com/">Google.com</a><p>
-      <p><a href="http://www.clubpenguin.com/">Club Pengies</a></p>
-    </div>
-  </div>
-
-
-</body>
-
+  </body>
 </html>
